fixed z-index on main page

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ html {
 
 body {
   box-sizing: border-box;
-  margin: 0; }
+  margin: 0;
+  z-index: 0;
+  overflow-x: hidden; }
 
 body {
   font-family: "Lato", sans-serif;
