--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,4 +14,6 @@ html{
 body{
 box-sizing: border-box;
 margin: 0;
+z-index: 0;
+overflow-x: hidden;
 }
